Closed
Bug 987031
Opened 11 years ago
Closed 11 years ago
"Assertion failure: mNamespaceID != kNameSpaceID_None"
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
VERIFIED
FIXED
mozilla31
| Tracking | Status | |
|---|---|---|
| firefox31 | --- | verified |
People
(Reporter: jruderman, Assigned: wchen)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
Assertion failure: mNamespaceID != kNameSpaceID_None (This equals method is not transitive, nor symmetric. A key with a namespace of kNamespaceID_None should not be stored in a hashtable.), at content/base/src/nsDocument.h:270
This assertion was added in bug 856140:
https://hg.mozilla.org/mozilla-central/rev/174ec7df74ae
| Reporter | ||
Comment 1•11 years ago
|
||
Comment 2•11 years ago
|
||
Yeah, that just looks broken. If you need a placeholder "never used by elements" namespace ID, shouldn't you use kNameSpaceID_Unknown?
Flags: needinfo?(wchen)
| Assignee | ||
Comment 3•11 years ago
|
||
(In reply to Boris Zbarsky [:bz] from comment #2)
> Yeah, that just looks broken. If you need a placeholder "never used by
> elements" namespace ID, shouldn't you use kNameSpaceID_Unknown?
Yeah, that's what I should have used.
Comment 4•11 years ago
|
||
Comment on attachment 8396029 [details] [diff] [review]
Use kNamespaceID_Unknown to match any namespace in the web components custom element registry.
Do you want "*" to match everything too? In that case, you may want kNameSpaceID_Wildcard.
Updated•11 years ago
|
Attachment #8396029 -
Flags: review?(mrbkap) → review+
| Assignee | ||
Comment 5•11 years ago
|
||
(In reply to Boris Zbarsky [:bz] from comment #4)
> Comment on attachment 8396029 [details] [diff] [review]
> Do you want "*" to match everything too? In that case, you may want
> kNameSpaceID_Wildcard.
No, I don't want "*" to match.
https://hg.mozilla.org/integration/mozilla-inbound/rev/3c09159e01da
Flags: in-testsuite+
OS: Mac OS X → All
Hardware: x86_64 → All
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Comment 7•11 years ago
|
||
Reproduced in Nightly 2014-03-24-mozilla-central-debug.
Verified fixed Nightly 31.0a1 2014-03-31-mozilla-central-debug, Win 7 x64.
Status: RESOLVED → VERIFIED
status-firefox31:
--- → verified
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•