Bug 987031 - Use kNamespaceID_Unknown to match any namespace in the web components custom element registry. r=mrbkap